--- a/MathRandomEJS/views/minemax/minmax.ejs
+++ b/MathRandomEJS/views/minemax/minmax.ejs
@@ -9,13 +9,20 @@
 
     <h2>JavaScript Math.min()</h2>
 
-    <p>Math.min() returns the lowest value in a list of arguments:</p>
+    <p>Math.min() retorna o menor valor da lista:</p>
+    <form>
+        <h3>1)</h3><input type="text" name="ent1" value="">
+        <h3>2)</h3><input type="text" name="ent2" value="">
+        <h3>3)</h3><input type="text" name="ent3" value="">
+        <h3>4)</h3><input type="text" name="ent4" value="">
+        <input type="button" name="encontrar" value="Encontrar Menor" onClick="">
+    </form>
     
+
     <p id="demo"></p>
     
     <script>
-    document.getElementById("demo").innerHTML =
-    Math.min(0, 150, 30, 20, -8, -200);
+    document.getElementById("demo").innerHTML = Math.min(0, 150, 30, 20, -8, -200);
     </script>
 
 <h2>JavaScript Math.min()</h2>
