--- a/MathRandomEJS/views/potencia/calcpotencia.ejs
+++ b/MathRandomEJS/views/potencia/calcpotencia.ejs
@@ -8,7 +8,7 @@
 <body>
     <script>
     function result(x, y){
-        document.getElementById("resultado").innerHTML = Math.pow(a,b);
+        document.getElementById("resultado").innerHTML = Math.pow(parsefloat(a), parsefloat(b));
     }
     </script>
     <h2>Cálculo de Potência</h2>
