--- a/MathRandomEJS/views/minemax/minmax.ejs
+++ b/MathRandomEJS/views/minemax/minmax.ejs
@@ -7,33 +7,50 @@
 </head>
 <body>
 
+    <script>
+        function minimo(){
+        a = document.getElementById("ent1").value
+        b = document.getElementById("ent2").value
+        c = document.getElementById("ent3").value
+        d = document.getElementById("ent4").value
+        document.getElementById("demo").innerHTML = Math.min(a, b, c, d);
+        }
+    </script>
+
     <h2>JavaScript Math.min()</h2>
 
     <p>Math.min() retorna o menor valor da lista:</p>
-    <form>
-        <h3>1)</h3><input type="text" name="ent1" value="">
-        <h3>2)</h3><input type="text" name="ent2" value="">
-        <h3>3)</h3><input type="text" name="ent3" value="">
-        <h3>4)</h3><input type="text" name="ent4" value="">
-        <input type="button" name="encontrar" value="Encontrar Menor" onClick="">
-    </form>
+
+    <h3>1)<input type="text" name="ent1" value=""></h3>
+    <h3>2)<input type="text" name="ent2" value=""></h3>
+    <h3>3)<input type="text" name="ent3" value=""></h3>
+    <h3>4)<input type="text" name="ent4" value=""></h3>
+    <button onClick="minimo()"></button>
     
 
-    <p id="demo"></p>
+    <h3>O menor número é: <b id="demo"></b></h3>
     
-    <script>
-    document.getElementById("demo").innerHTML = Math.min(0, 150, 30, 20, -8, -200);
-    </script>
 
-<h2>JavaScript Math.min()</h2>
+<h2>JavaScript Math.max()</h2>
 
-<p>Math.min() returns the lowest value in a list of arguments:</p>
+<p>Math.max() retorna o maior valor da lista:</p>
 
-<p id="demo"></p>
+    <h3>1)<input type="text" name="ent5" value=""></h3>
+    <h3>2)<input type="text" name="ent6" value=""></h3>
+    <h3>3)<input type="text" name="ent7" value=""></h3>
+    <h3>4)<input type="text" name="ent8" value=""></h3>
+    <button onClick="minimo()"></button>
+
+<h3>O maior número é: <b id="demo2"></b></h3>
 
 <script>
-document.getElementById("demo").innerHTML =
-Math.min(0, 150, 30, 20, -8, -200);
+    function maximo(){
+        e = document.getElementById("ent5").value
+        f = document.getElementById("ent6").value
+        g = document.getElementById("ent7").value
+        h = document.getElementById("ent8").value
+        document.getElementById("demo2").innerHTML = Math.min(e, f, g, h);
+    }
 </script>
     
     
