--- a/MathRandomEJS/views/minemax/minmax.ejs
+++ b/MathRandomEJS/views/minemax/minmax.ejs
@@ -21,11 +21,11 @@
 
     <p>Math.min() retorna o menor valor da lista:</p>
 
-    <h3>1)<input type="text" name="ent1" value=""></h3>
-    <h3>2)<input type="text" name="ent2" value=""></h3>
-    <h3>3)<input type="text" name="ent3" value=""></h3>
-    <h3>4)<input type="text" name="ent4" value=""></h3>
-    <button onClick="minimo()"></button>
+    <h3>1)<input type="text" id="ent1" value=""></h3>
+    <h3>2)<input type="text" id="ent2" value=""></h3>
+    <h3>3)<input type="text" id="ent3" value=""></h3>
+    <h3>4)<input type="text" id="ent4" value=""></h3>
+    <button onClick="minimo()">Confirmar</button>
     
 
     <h3>O menor número é: <b id="demo"></b></h3>
@@ -35,11 +35,11 @@
 
 <p>Math.max() retorna o maior valor da lista:</p>
 
-    <h3>1)<input type="text" name="ent5" value=""></h3>
-    <h3>2)<input type="text" name="ent6" value=""></h3>
-    <h3>3)<input type="text" name="ent7" value=""></h3>
-    <h3>4)<input type="text" name="ent8" value=""></h3>
-    <button onClick="minimo()"></button>
+    <h3>1)<input type="text" id="ent5" value=""></h3>
+    <h3>2)<input type="text" id="ent6" value=""></h3>
+    <h3>3)<input type="text" id="ent7" value=""></h3>
+    <h3>4)<input type="text" id="ent8" value=""></h3>
+    <button onClick="maximo()">Confirmar</button>
 
 <h3>O maior número é: <b id="demo2"></b></h3>
 
