--- a/MathRandomEJS/views/minemax/minmax.ejs
+++ b/MathRandomEJS/views/minemax/minmax.ejs
@@ -49,7 +49,7 @@
         f = document.getElementById("ent6").value
         g = document.getElementById("ent7").value
         h = document.getElementById("ent8").value
-        document.getElementById("demo2").innerHTML = Math.min(e, f, g, h);
+        document.getElementById("demo2").innerHTML = Math.max(e, f, g, h);
     }
 </script>
     
