--- a/MathRandomEJS/views/minemax/minmax.ejs
+++ b/MathRandomEJS/views/minemax/minmax.ejs
@@ -19,37 +19,27 @@
 
     <h2>JavaScript Math.min()</h2>
 
-    <p>Math.min() retorna o menor valor da lista:</p>
+    <p>Math.min() e Math.max() retorna o menor e maior valor da lista, respectivamente:</p>
 
     <h3>1)<input type="text" id="ent1" value=""></h3>
     <h3>2)<input type="text" id="ent2" value=""></h3>
     <h3>3)<input type="text" id="ent3" value=""></h3>
     <h3>4)<input type="text" id="ent4" value=""></h3>
-    <button onClick="minimo()">Confirmar</button>
+    <button onClick="minimo()">Achar o menor</button>
+    <button onClick="maximo()">Achar o maior</button>
     
 
-    <h3>O menor número é: <b id="demo"></b></h3>
+    <h3>O resultado é: <b id="demo"></b></h3>
     
 
-<h2>JavaScript Math.max()</h2>
-
-<p>Math.max() retorna o maior valor da lista:</p>
-
-    <h3>1)<input type="text" id="ent5" value=""></h3>
-    <h3>2)<input type="text" id="ent6" value=""></h3>
-    <h3>3)<input type="text" id="ent7" value=""></h3>
-    <h3>4)<input type="text" id="ent8" value=""></h3>
-    <button onClick="maximo()">Confirmar</button>
-
-<h3>O maior número é: <b id="demo2"></b></h3>
 
 <script>
     function maximo(){
-        e = document.getElementById("ent5").value
-        f = document.getElementById("ent6").value
-        g = document.getElementById("ent7").value
-        h = document.getElementById("ent8").value
-        document.getElementById("demo2").innerHTML = Math.max(e, f, g, h);
+        e = document.getElementById("ent1").value
+        f = document.getElementById("ent2").value
+        g = document.getElementById("ent3").value
+        h = document.getElementById("ent4").value
+        document.getElementById("demo").innerHTML = Math.max(e, f, g, h);
     }
 </script>
     
