--- a/MathRandomEJS/views/minemax/minmax.ejs
+++ b/MathRandomEJS/views/minemax/minmax.ejs
@@ -17,7 +17,7 @@
         }
     </script>
 
-    <h2>JavaScript Math.min()</h2>
+    <h2>JavaScript Math.min() e Math.max()</h2>
 
     <p>Math.min() e Math.max() retorna o menor e maior valor da lista, respectivamente:</p>
 
